--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,7 @@ jobs:
 
       - name: Build with Maven
         run: mvn -B package -DskipTests
+        working-directory: ./Final Fantasy Web Scraping/
   test:
     runs-on: ubuntu-latest
     steps:
